--- a/webvrsample/MDN_demo/2.html
+++ b/webvrsample/MDN_demo/2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>MDN Games: A-Frame demo</title>
-  <script src="aframe.min.js"></script>
+  <script src="https://aframe.io/releases/1.0.1/aframe.min.js"></script>
 </head>
 <body>
   <a-scene>
