--- a/webvrsample/MDN_demo/2.html
+++ b/webvrsample/MDN_demo/2.html
@@ -8,7 +8,7 @@
 <body>
   <a-scene>
     <a-sky color="#DDDDDD"></a-sky>
-    <a-cube　color="#0095DD"　position="0 1 0"　rotation="20 40 0"></a-cube>
+    <a-box　color="#0095DD"　position="0 1 0"　rotation="20 40 0"></a-box>
   </a-scene>
 </body>
 </html>
