--- a/webvrsample/a_frame/building-a-basic-scene/13.html
+++ b/webvrsample/a_frame/building-a-basic-scene/13.html
@@ -4,6 +4,21 @@
     <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
   </head>
   <body>
+    <script>
+      AFRAME.registerComponent('scale-on-mouseenter', {
+        schema: {
+          to: {default: '2.5 2.5 2.5', type: 'vec3'}
+        },
+
+        init: function () {
+          var data = this.data;
+          var el = this.el;
+          this.el.addEventListener('mouseenter', function () {
+            el.object3D.scale.copy(data.to);
+          });
+        }
+      });
+    </script>
     <a-scene>
       <a-assets>
         <img id="boxTexture" src="https://i.imgur.com/mYmmbrp.jpg">
@@ -16,11 +31,5 @@
         <a-cursor></a-cursor>
       </a-camera>
     </a-scene>
-    <script>
-      var boxEl = document.querySelector('a-box');
-      boxEl.addEventListener('mouseenter', function () {
-        boxEl.setAttribute('scale', {x: 2, y: 2, z: 2});
-      });
-    </script>
   </body>
 </html>
