--- a/click_event/click_test/index.html
+++ b/click_event/click_test/index.html
@@ -1,3 +1,3 @@
 <button onclick="alert('button click.')">click</button>
 
-<div onclick="alert('div click.')"></div>
+<div onclick="alert('div click.')">click</div>
