--- a/click_event/hover_test/2/index.html
+++ b/click_event/hover_test/2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>hover test</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
     <div id="hov_elm">:hover sample</div>
