id 指定をやめてみる

--- a/click_event/hover_test/3/index.html
+++ b/click_event/hover_test/3/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="hov_elm">:hover sample</div>
-    <p>touchstart, touchend, mousedown, mouseup, click の計5イベントを監視</p>
+    <p>touchstart, touchend, mousedown, mouseup, click の計5イベントを監視 2</p>
     <div id="event_name"></div>
     <script src="script.js"></script>
   </body>
