要素を深くしてみる

--- a/click_event/hover_test/4/index.html
+++ b/click_event/hover_test/4/index.html
@@ -1,9 +1,9 @@
 <head>
-  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class='contents'>
-    <div class="icon"><span class='open'>click</span></div>
+  <div>
+    <div id="click_div">click</div>
   </div>
-  <script src="controller.js"></script>
+  <script src="script.js"></script>
 </body>
