pointer-events: none

--- a/click_event/hover_test/4/index.html
+++ b/click_event/hover_test/4/index.html
@@ -2,7 +2,7 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div>
+  <div style="pointer-events: none;">
     <div id="click_div">click</div>
   </div>
   <script src="script.js"></script>
