--- a/click_event/hover_test/4/index.html
+++ b/click_event/hover_test/4/index.html
@@ -2,8 +2,8 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div style="pointer-events: none;">
-    <div id="click_div">click</div>
+  <div>
+    <img src="https://placehold.jp/150x150.png" alt="alt" id="click">
   </div>
   <script src="script.js"></script>
 </body>
