pointer event hover

--- a/click_event/hover_test/4/index.html
+++ b/click_event/hover_test/4/index.html
@@ -1,9 +1,11 @@
-<head>
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-</head>
-<body>
-  <div style="pointer-events: none;">
-    <img src="https://placehold.jp/150x150.png" alt="alt" id="click">
-  </div>
-  <script src="script.js"></script>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>hover test</title>
+    <link rel="stylesheet" href="../style.css">
+  </head>
+  <body>
+    <div id="hov_elm" style="pointer-events: auto;">:hover sample</div>
+  </body>
+</html>
