--- a/click_event/hover_test/4/index.html
+++ b/click_event/hover_test/4/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>hover test</title>
-    <link rel="stylesheet" href="../style.css" onclick="" style="cursor: pointer;">
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <div id="hov_elm" style="pointer-events: auto;">:hover sample cursor: pointer</div>
+    <div id="hov_elm" onclick="" style="pointer-events: auto; cursor: pointer;">:hover sample fix</div>
   </body>
 </html>
