--- a/click_event/hover_test/4/index.html
+++ b/click_event/hover_test/4/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <div id="hov_elm" style="cursor: pointer;">:hover sample cursor pointer only</div>
+    <div id="hov_elm" onclick="">:hover sample onclick only</div>
   </body>
 </html>
