--- a/click_event/hover_test/5/index.html
+++ b/click_event/hover_test/5/index.html
@@ -4,8 +4,9 @@
   </head>
   <body>
   <div style="pointer-events: none;">
-    <img src="https://placehold.jp/150x150.png" alt="alt" style="cursor: pointer;">
+    <img src="https://placehold.jp/150x150.png" alt="alt" onclick="">
   </div>
+  has onclick
   <script src="script.js"></script>
   </body>
 </html>
