--- a/click_event/hover_test/4/index.html
+++ b/click_event/hover_test/4/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <div id="hov_elm" onclick="">:hover sample onclick only</div>
+    <div>
+      <div id="hov_elm" onclick="">:hover sample onclick only</div>
+    </div>
   </body>
 </html>
