--- a/click_event/hover/index.html
+++ b/click_event/hover/index.html
@@ -7,8 +7,6 @@
   </head>
   <body>
     <div id="hov_elm">:hover sample</div>
-    <p>touchstart, touchend, mousedown, mouseup, click の計5イベントを監視</p>
-    <div id="event_name"></div>
-    <script src="script.js"></script>
+    <p>:hover を設定した div</p>
   </body>
 </html>
