--- a/click_event/hover_listen/index.html
+++ b/click_event/hover_listen/index.html
@@ -8,8 +8,11 @@
   </head>
   <body>
     <div id="hov_elm">:hover sample</div>
-    <p>click だけ監視 1</p>
+
+    <p>touchstart, touchend, mousedown, mouseup, click の計5イベントを監視</p>
+
     <div id="event_name"></div>
+
     <script src="script.js"></script>
   </body>
 </html>
