--- a/click_event/hover_listen/index.html
+++ b/click_event/hover_listen/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="hov_elm">:hover sample</div>
 
-    <p>touchstart, touchend, mousedown, mouseup, click の計5イベントを監視</p>
+    <p>touchstart, touchend, mousedown, mouseup, click の計5イベントを jQuery .on() で監視</p>
 
     <div id="event_name"></div>
 
