--- a/click_event/addition_elm/index.html
+++ b/click_event/addition_elm/index.html
@@ -11,7 +11,7 @@
       <div class="hov_elm">:hover sample</div>
     </div>
     <button id="add_btn">elm add.</button>
-    <p>div を後から追加する.</p>
+    <p>div を後から追加する</p>
 
     <div id="event_name"></div>
 
